@@ -1,3 +1,7 @@
+24-10-2004 Qball <Qball@qballcow.nl>
+	* src/playlist3.c:	Moved code around, improved function naming.
+	* sr/cplaylist3.c:	Added replace option in right mouse menu.
+
 22-10-2004 Qball <Qball@qballcow.nl.
 	* Started initial work on playlist version 3
 
